# lattica

./: CMakeLists.txt  README.md  build.sh
dependencies/: CMakeLists.txt
dependencies/cmake_imgui/: CMakeLists.txt
include/lattica/: generate.h
src/: CMakeLists.txt  generate.c
test/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  main.cpp  viewer.cpp
